tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__color_simple.snap
---
source: tests/integration/lsp/text_document/completion.rs
assertion_line: 370
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\color{}\n%CUR        ^\"#)?"
---
[
  {
    "data": "[data]",
    "kind": 1,
    "label": "Apricot",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Apricot"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "Aquamarine",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Aquamarine"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "Bittersweet",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Bittersweet"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "Black",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Black"
    }
  },
  {
    "data": "[data]",
    "kind": 1,
    "label": "Blue",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "Blue"
    }
  }
]
