tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__component_command_bibtex.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%BIB main.bib\n%SRC @article{b, \n%SRC     c = {\\LaT }\n%CUR            ^\n%1.1           ^^^\n%SRC }\"#)?"
---
[
  {
    "detail": "built-in",
    "kind": 1,
    "label": "LaTeX",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LaTeX"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "LaTeXe",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LaTeXe"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "latexreleaseversion",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "latexreleaseversion"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "LastDeclaredEncoding",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LastDeclaredEncoding"
    }
  },
  {
    "detail": "built-in",
    "kind": 1,
    "label": "last",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "last"
    }
  }
]
