tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__component_command_simple_package.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\usepackage{lipsum}\n%SRC \\lips\n%CUR    ^\n%1.1  ^^^^\"#)?"
---
[
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "lipsum",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lipsum"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "lipsumexp",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lipsumexp"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "LipsumPar",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LipsumPar"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "LipsumProtect",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LipsumProtect"
    }
  },
  {
    "detail": "lipsum.sty",
    "kind": 1,
    "label": "LipsumRestoreAll",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "LipsumRestoreAll"
    }
  }
]
