tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__component_environment_simple.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\begin{doc\n%CUR           ^\n%1.1        ^^^\"#)?"
---
[
  {
    "detail": "built-in",
    "kind": 1,
    "label": "document",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "document"
    }
  }
]
